# SonATA

./: Makefile.am  autogen.sh  configure.ac
CppUnit/: autogen.sh  configure.ac  configure.gnu
Installation/: fed_preins.sh  sonata-build-meta-1.0.alpha-1.noarch.rpm  sonata-build-meta-1.0.alpha.centos-1.noarch.rpm  sonata-build-meta-1.0.alpha.centos.spec  sonata-build-meta-1.0.alpha.fed-1.noarch.rpm  sonata-build-meta-1.0.alpha.fed.spec  sonata-build-meta-1.0.alpha.spec  sonata-build-meta.deb
gsoc/: cen5_preins.sh  check.sh  deb_preins.sh  fed_preins.sh  sonata-build-meta-1.0.alpha-1.noarch.rpm  sonata-build-meta-1.0.alpha.fed.spec  sonata-build-meta-1.0.alpha.spec  sonata-build-meta.deb  sonata_i.sh  ubu_preins.sh
gsoc/32/: fed_preins.sh  ubu_preins.sh
gsoc/sonata-build-meta/DEBIAN/: control
m4/: check_gnu_make.m4
scripts/: Makefile.am  autogen.sh  configure.ac  configure.in  sserc.tcl
sig-pkg/: Makefile.am  autogen.sh  configure.ac  reconfig
sig-pkg/ATApackets/: Makefile.am  autogen.sh  configure.ac
sig-pkg/ATApackets/src/: Makefile.am
sig-pkg/ATApackets/test/: Makefile.am
sig-pkg/channelizer/: configure.ac
sig-pkg/channelizer/src/: Makefile.am
sig-pkg/daddLib/: Makefile.am  configure.ac
sig-pkg/daddLib/src/: Makefile.am
sig-pkg/daddLib/test/: Makefile.am
sig-pkg/dfbLib/: Makefile.am  configure.ac
sig-pkg/dfbLib/src/: Makefile.am
sig-pkg/dfbLib/test/: Makefile.am
sig-pkg/dx/: Makefile.am  configure.ac
sig-pkg/dx/lib/: Makefile.am
sig-pkg/dx/src/: Makefile.am
sig-pkg/dx/test/: Makefile.am
sig-pkg/gaussLib/: configure.ac
sig-pkg/gaussLib/src/: Makefile.am
sig-pkg/gaussLib/test/: Makefile.am
sig-pkg/sonataLib/: Makefile.am  configure.ac
sig-pkg/sonataLib/src/: Makefile.am
sig-pkg/spectraLib/: configure.ac
sig-pkg/spectraLib/src/: Makefile.am
sig-pkg/spectraLib/test/: Makefile.am
sig-pkg/utilities/: Makefile.am  autogen.sh  configure.ac
sig-pkg/utilities/packetchan2beam/: Makefile.am  configure.ac
sig-pkg/utilities/packetchan2beam/src/: Makefile.am
sig-pkg/utilities/packetgen/: configure.ac
sig-pkg/utilities/packetgen/src/: Makefile.am
sig-pkg/utilities/packetread/: configure.ac
sig-pkg/utilities/packetread/src/: Makefile.am
sig-pkg/utilities/packetrelay/: Makefile.am  configure.ac
sig-pkg/utilities/packetrelay/src/: Makefile.am
sig-pkg/utilities/packetsend/: configure.ac
sig-pkg/utilities/packetsend/src/: Makefile.am
sig-pkg/utilities/packetsqimport/: configure.ac
sig-pkg/utilities/packetsqimport/src/: Makefile.am
sse-pkg/: Makefile.am  autogen.sh  configure.ac  configure.in  reconfig
sse-pkg/ifc/: Makefile.am
sse-pkg/m4/: ax_ext_have_lib.m4
sse-pkg/sse/: Makefile.am
sse-pkg/tsig/: Makefile.am
tclreadline/: autogen.sh  configure.ac  configure.gnu
