AC_INIT([SonATA],[version-1.0])
AC_ARG_PROGRAM
AM_MAINTAINER_MODE
AM_INIT_AUTOMAKE(SonATA, 1.00)
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_SUBDIRS([tclreadline	
                   CppUnit
                   sse-pkg
                   sig-pkg
                   scripts])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
